--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ chat='true'>
 <body>
     <div class="container">
         <h2>Contact Form</h2>
-        <form action="/submit-form" method="post">
+        <form id="Helpify">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
