--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ chat='true'>
             <input type="email" id="email" name="email" required>
             <label for="mobile">Mobile Number:</label>
             <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required>
-            <button type="submit">Submit</button>
+            <button><span class="l7_2fn wixui-button__label">Send</span></button>
         </form>
     </div>
 </body>
