--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ chat='true'>
             <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required>
             <button><span class="l7_2fn wixui-button__label">Send</span></button>
         </form>
+        <script>  
+document.querySelector("#Helpify > button").type = "submit"; 
+</script>
     </div>
 </body>
 </html>
